--- a/styl/style.styl
+++ b/styl/style.styl
@@ -33,9 +33,9 @@ body
     font-size            15px
     margin               0
     overflow             hidden
-    -webkit-app-region   drag
+    -webkit-app-region   no-drag
     -webkit-user-select  none
-
+    
 // 00     00   0000000   000  000   000  
 // 000   000  000   000  000  0000  000  
 // 000000000  000000000  000  000 0 000  
@@ -43,7 +43,6 @@ body
 // 000   000  000   000  000  000   000  
 
 #main
-    -webkit-app-region   drag
     overflow            hidden
     position            absolute
     pointer-events      all
@@ -57,11 +56,11 @@ body
     min-width           64px
     border-bottom       1px solid
     position            relative
-    
+    pointer-events      all
     &.Appl
         display         inline-grid
         max-width       50%
-    
+            
 // 000  00     00   0000000   
 // 000  000   000  000        
 // 000  000000000  000  0000  
@@ -87,20 +86,13 @@ body
     width               80%
     cursor              pointer
 
-.annyicon
-    cursor              pointer
-
-.appname
-    position            absolute
-    text-align          center
-    
 .appldot
     position            absolute
-    left                0
-    bottom              0
+    left                4px
+    bottom              4px
     width               8px
     height              8px
     & .applcircle
-        stroke-width    2
-        stroke          url(#appldotstroke)
+        stroke-width    0
+        // stroke          url(#appldotstroke)
     
