--- a/styl/dark.styl
+++ b/styl/dark.styl
@@ -55,7 +55,19 @@ bgFocus   = #333333
     fill                 #22f
 .sysdish_mem_active 
     fill                 #88f
+    
+// 0000000     0000000   000000000  000000000  00000000  00000000   000   000  
+// 000   000  000   000     000        000     000       000   000   000 000   
+// 0000000    000000000     000        000     0000000   0000000      00000    
+// 000   000  000   000     000        000     000       000   000     000     
+// 0000000    000   000     000        000     00000000  000   000     000     
 
+.battery_bg
+    fill                 #000
+
+.core_bg
+    fill                 #1a1a1a
+    
 //  0000000  000       0000000    0000000  000   000    
 // 000       000      000   000  000       000  000     
 // 000       000      000   000  000       0000000      
