--- a/js/css/style.css
+++ b/js/css/style.css
@@ -4,6 +4,12 @@
   font-style: normal;
   src: url("../../node_modules/kxk/styl/Bahnschrift.woff");
 }
+@font-face {
+  font-family: calendarFont;
+  font-weight: normal;
+  font-style: normal;
+  src: url("../../node_modules/kxk/styl/Bahnschrift.woff");
+}
 * {
   outline-width: 0;
 }
@@ -39,6 +45,14 @@ body {
   display: inline-grid;
   max-width: 50%;
 }
+.kachel.Battery {
+  display: inline-grid;
+  width: 32%;
+}
+.kachel.Cores {
+  display: inline-grid;
+  width: 33%;
+}
 .kachelImg {
   margin: auto;
   width: 70%;
@@ -62,4 +76,24 @@ body {
 }
 .appldot .applcircle {
   stroke-width: 0;
+}
+.calendarMonth {
+  position: absolute;
+  top: 21.5%;
+  left: 36%;
+  font-size: 14px;
+  font-family: calendarFont;
+  line-height: 1;
+  color: #fff;
+  background-color: #e8564e;
+}
+.calendarDay {
+  position: absolute;
+  top: 38%;
+  left: 27%;
+  font-size: 37px;
+  font-family: calendarFont;
+  line-height: 1;
+  color: #000;
+  background-color: #f8f8f8;
 }
