--- a/styl/style.styl
+++ b/styl/style.styl
@@ -11,6 +11,12 @@
     font-style      normal
     src             url("../../node_modules/kxk/styl/Bahnschrift.woff")
 
+@font-face 
+    font-family     calendarFont
+    font-weight     normal
+    font-style      normal
+    src             url("../../node_modules/kxk/styl/Bahnschrift.woff")
+    
 // 0000000     0000000   0000000    000   000
 // 000   000  000   000  000   000   000 000 
 // 0000000    000   000  000   000    00000  
@@ -59,6 +65,12 @@ body
     &.Appl
         display         inline-grid
         max-width       50%
+    &.Battery
+        display         inline-grid
+        width           32%
+    &.Cores
+        display         inline-grid
+        width           33%
             
 // 000  00     00   0000000   
 // 000  000   000  000        
@@ -93,5 +105,31 @@ body
     height              8px
     & .applcircle
         stroke-width    0
-        // stroke          url(#appldotstroke)
+        
+//  0000000   0000000   000      00000000  000   000  0000000     0000000   00000000   
+// 000       000   000  000      000       0000  000  000   000  000   000  000   000  
+// 000       000000000  000      0000000   000 0 000  000   000  000000000  0000000    
+// 000       000   000  000      000       000  0000  000   000  000   000  000   000  
+//  0000000  000   000  0000000  00000000  000   000  0000000    000   000  000   000  
+
+.calendarMonth
+    position            absolute
+    top                 21.5%
+    left                36%
+    font-size           14px
+    font-family         calendarFont
+    line-height         1
+    color               white
+    background-color    #E8564E
+ 
+.calendarDay
+    position            absolute
+    top                 38%
+    left                27%
+    font-size           37px
+    font-family         calendarFont
+    line-height         1
+    color               black
+    background-color    #F8F8F8
+        
     
