--- a/pug/index.pug
+++ b/pug/index.pug
@@ -7,6 +7,6 @@ html(lang="en")
         link(rel='stylesheet' href='./css/style.css' type='text/css')
         link(rel='stylesheet' href='./css/dark.css'  type='text/css', id='style-link')
     body
-        #main(tabindex=0)
+        #main
     script.
         require('./window.js')
