--- a/styl/style.styl
+++ b/styl/style.styl
@@ -58,8 +58,6 @@ body
 
 .kachel
     -webkit-app-region  no-drag
-    min-width           64px
-    border-bottom       1px solid
     position            relative
     pointer-events      all
     &.Appl
@@ -112,24 +110,31 @@ body
 // 000       000   000  000      000       000  0000  000   000  000   000  000   000  
 //  0000000  000   000  0000000  00000000  000   000  0000000    000   000  000   000  
 
-.calendarMonth
+.calendarIcon
     position            absolute
-    top                 21.5%
-    left                36%
-    font-size           14px
+    border-radius       20%
+    width               63%
+    height              63%
+    margin              auto
+    overflow            hidden
+    cursor              pointer
+
+.calendarMonth
+    font-size           7vw
     font-family         calendarFont
     line-height         1
+    text-align          center
     color               white
     background-color    #E8564E
+    padding             1vw
  
 .calendarDay
-    position            absolute
-    top                 38%
-    left                27%
-    font-size           37px
+    font-size           21vw
+    text-align          center
     font-family         calendarFont
     line-height         1
     color               black
     background-color    #F8F8F8
+    padding-bottom      4vw
         
     
