--- a/styl/dark.styl
+++ b/styl/dark.styl
@@ -55,19 +55,7 @@ bgFocus   = #333333
     fill                 #22f
 .sysdish_mem_active 
     fill                 #88f
-    
-// 0000000     0000000   000000000  000000000  00000000  00000000   000   000  
-// 000   000  000   000     000        000     000       000   000   000 000   
-// 0000000    000000000     000        000     0000000   0000000      00000    
-// 000   000  000   000     000        000     000       000   000     000     
-// 0000000    000   000     000        000     00000000  000   000     000     
-
-.battery_bg
-    fill                 #000
-
-.core_bg
-    fill                 #1a1a1a
-    
+        
 //  0000000  000       0000000    0000000  000   000    
 // 000       000      000   000  000       000  000     
 // 000       000      000   000  000       0000000      
@@ -105,4 +93,58 @@ bgFocus   = #333333
         fill            #161616
     &.top
         fill            #f80
+        
+// 0000000     0000000   000000000  000000000  00000000  00000000   000   000  
+// 000   000  000   000     000        000     000       000   000   000 000   
+// 0000000    000000000     000        000     0000000   0000000      00000    
+// 000   000  000   000     000        000     000       000   000     000     
+// 0000000    000   000     000        000     00000000  000   000     000     
+
+.battery_bg
+    fill                 #000
+
+.battery_cycles
+    position            absolute
+    width               100%
+    text-align          center
+    padding-top         35%
+    padding-bottom      35%
+    color               #0000
+    &:hover
+        color           #888
+        
+// 000   000   0000000   000      000   000  00     00  00000000    
+// 000   000  000   000  000      000   000  000   000  000         
+//  000 000   000   000  000      000   000  000000000  0000000     
+//    000     000   000  000      000   000  000 0 000  000         
+//     0       0000000   0000000   0000000   000   000  00000000    
+    
+
+.knob
+    fill                #1c1c1c
+
+.scale
+.volmrk
+    stroke              #000
+    stroke-width        4
+
+.voldot
+    fill                #888
+    &.mute 
+        fill            #141414
+ 
+//  0000000   0000000   00000000   00000000  
+// 000       000   000  000   000  000       
+// 000       000   000  0000000    0000000   
+// 000       000   000  000   000  000       
+//  0000000   0000000   000   000  00000000  
+
+.core_bg
+    fill                 #181818
+    stroke               #000
+    stroke-width         4
+    
+.core_load
+    fill                 #1c1c1c
+        
         
