--- a/js/css/style.css
+++ b/js/css/style.css
@@ -83,7 +83,7 @@ body {
   border-radius: 20%;
   width: 63%;
   height: 63%;
-  margin: auto;
+  margin: 20%;
   overflow: hidden;
   cursor: pointer;
 }
