--- a/styl/style.styl
+++ b/styl/style.styl
@@ -117,7 +117,7 @@ body
     border-radius       20%
     width               63%
     height              63%
-    margin              auto
+    margin              20%
     overflow            hidden
     cursor              pointer
 
